--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,12 @@
 
 .home {
   .intro {
+    margin-top: 100px;
+
+    @media @phone {
+      margin-top: 0;
+    }
+
     #header-img {
       border-radius: 5px;
       width: 100%;
