--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,13 @@
   width: 100%;
   border-bottom: 1px solid @main-border-color;
 
+  position: fixed;
+  top: 0;
+
+  @media @phone {
+    position: relative;
+  }
+
   h1 {
     font-size: 4rem;
   }
